--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+
+    maven {
+        url "https://repo.spring.io/libs-release/"
+    }
 }
 
 dependencies {
@@ -18,6 +22,15 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.jcraft/jsch
     implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+
+    // https://mvnrepository.com/artifact/net.sf.expectit/expectit-core
+    implementation group: 'net.sf.expectit', name: 'expectit-core', version: '0.9.0'
+
+    // https://mvnrepository.com/artifact/com.github.kittinunf.fuel/fuel
+    implementation group: 'com.github.kittinunf.fuel', name: 'fuel', version: '2.2.1'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
